@@ -14,6 +14,8 @@
 
   * Home, End, Tab keys now work in menus.
 
+  * Resizing the window in inputs, requesters is more sane.
+
 3.0.1 2015-06-22
 
   * Updated version of GNU regex library provides 64-bit regular
